--- a/_posts/2020_06_06.md
+++ b/_posts/2020_06_06.md
@@ -5,11 +5,29 @@ title: June 6, 2020, Atlassing Buchanan County
 
 ## The Role of Privilege in Volunteer Citizen Science
 
-This post describes my participation in volunteer citizen science activity related to birding (bird watching) in Buchanan County, Virginia. Especially as highlighted by recent events, it is important to recognize the unearned privilege that I, as a white man receive in that I am able to go to public areas in the United States with a feeling of welcome and safety. Better than my description, read the [interview](https://www.nytimes.com/2020/05/27/nyregion/amy-cooper-christian-central-park-video.html) transcription from Christian Cooper who was accosted in New York's Central Park while birding. The consequences faced by black people in this country are serious. Ahmaud Arbery was [murdered](https://www.nytimes.com/article/ahmaud-arbery-shooting-georgia.html) in Georgia while jogging. And the arrival of the police can result in death, as it did for [George Floyd](https://www.nytimes.com/2020/05/31/us/george-floyd-investigation.html). I on the other hand have received only polite inquiries and even offers of assistance while doing this citizen science project. *It is my fervent desire that anyone regardless of race or gender be able to feel at least as safe and welcome as I have.* While performing this volunteer work, I also shared and encouraged participation in [Black Birders Week](https://www.npr.org/2020/06/03/869052336/-blackbirdersweek-seeks-to-make-the-great-outdoors-open-to-all) with other atlas volunteers and my social media outlets. #BlackLivesMatter
+This post describes my participation in volunteer citizen science activity related to birding (bird watching) in Buchanan County, Virginia. Especially as highlighted by recent events, it is important to recognize the unearned privilege that I, as a white man receive in that I am able to go to public areas in the United States with a feeling of welcome and safety. Better than my description, read the [interview](https://www.nytimes.com/2020/05/27/nyregion/amy-cooper-christian-central-park-video.html) transcription from Christian Cooper who was accosted in New York's Central Park while birding. The consequences faced by black people in this country are serious. Ahmaud Arbery was [murdered](https://www.nytimes.com/article/ahmaud-arbery-shooting-georgia.html) in Georgia while jogging. And the arrival of the police can result in death, as it did for [George Floyd](https://www.nytimes.com/2020/05/31/us/george-floyd-investigation.html). I on the other hand have received only polite inquiries and even offers of assistance while doing this citizen science project. *It is my fervent desire that anyone regardless of race or gender be able to feel at least as safe and welcome as I have in visiting these beautiful parts of virginia.* While performing this volunteer work, I also shared and encouraged participation in [Black Birders Week](https://www.npr.org/2020/06/03/869052336/-blackbirdersweek-seeks-to-make-the-great-outdoors-open-to-all) with other atlas volunteers and my social media outlets. 
+
+## Acknowledgments
+
+In visiting the county I was greatly aided by Buchanan County standout birders Daryl Owens and Roger Mayhorn. Daryl wrote an excellent [description](https://birdingvirginia.org/buchanan) of area birding, and Roger is the president of the [Buchanan County Bird Club](https://sites.google.com/site/buchananbirds/). Both Daryl and Roger provided welcome personal attention and assistance to ensure I had the information that would help me perform my volunteer activities. Daryl took me to some excellent sites and Roger invited me to visit his gorgeous yard and property which he has transformed over time into a haven for birds with native plantings and bird friendly features. 
 
 ## Introduction
 
-## 
+### The 2nd Virginia Breeding Bird Atlas 
+
+The 2nd Virginia Breeding Bird Atlas[(VABBA2)](https://ebird.org/atlasva/home) is a five year (2016-2020) statewide effort to understand the distribution of different bird species across the state. VABBA2 is funded and supported by the Virginia
+Department of Game and Inland Fisheries (VDGIF), as well as the Virginia Society of Ornithology
+(VSO). The first atlas was performed between 1985 and 1989. My involvement with the project started in earnest in the 2nd year of the project (2017) when Susan Babineau (spouse) and I started volunteering by going to different areas and documenting (using a protoco, apps, and online tools provided by the project) what birds we saw and whether they were exhibiting any breeding behavior. Birding is focused on priority blocks distributed evenly and randomly across 1/6 of the surface of Virginia.
+
+## Buchanan County
+
+[Buchanan county](https://en.wikipedia.org/wiki/Buchanan_County,_Virginia) is located in the western part of the state bordering both West Virginia and Kentucky. From a birding perspective, it offers plenty of mountainous woodland at medium elevation for the area. It is also interesting from the perspective that as a coal region county, significant surface mining has been performed in the area and some of the surface mines, no longer active, have been repurposed for recreational (and some wildlife) use. One of those areas was in a Priority Block I focused. These recovered areas, are flatter, and with successional habitat different than the surrounding woodlands. In one area, recovery includes [reintroduciton of Elk](https://www.yesmagazine.org/issue/dirt/2019/04/13/land-recovery-elk-wildlife-habitat-appalachia/) after being extirpated in Virginia 100 years ago.
+
+## My focus
+
+My objective in going to Buchanan county was to assist the birders living in the area with the monumental task of surveying the priority blocks of the county. Counties with higher populations, and therefore higher populations of birders are well covered after four years of atlassing, but counties like Buchanan still need more volunteer effort. 
+
+![image](https://photos.app.goo.gl/xKgGXv28fHyAeTG4A)
 
 Link examples
 
