--- a/_posts/2020_06_06.md
+++ b/_posts/2020_06_06.md
@@ -9,7 +9,7 @@ This post describes my participation in volunteer citizen science activity relat
 
 ## Acknowledgments
 
-In visiting the county I was greatly aided by Buchanan County standout birders Daryl Owens and Roger Mayhorn. Daryl wrote an excellent [description](https://birdingvirginia.org/buchanan) of area birding, and Roger is the president of the [Buchanan County Bird Club](https://sites.google.com/site/buchananbirds/). Both Daryl and Roger provided welcome personal attention and assistance to ensure I had the information that would help me perform my volunteer activities. Daryl took me to some excellent sites and Roger invited me to visit his gorgeous yard and property which he has transformed over time into a haven for birds with native plantings and bird friendly features. 
+I am grateful to Buchanan County standout birders Daryl Owens and Roger Mayhorn. Daryl wrote an excellent [description](https://birdingvirginia.org/buchanan) of area birding, and Roger is the president of the [Buchanan County Bird Club](https://sites.google.com/site/buchananbirds/). Both Daryl and Roger provided welcome assistance in best access locations in the area. Daryl took me to some excellent sites and Roger invited me to visit his gorgeous yard and property which he has transformed over time into a haven for birds with native plantings and bird friendly features. 
 
 ## Introduction
 
@@ -21,15 +21,15 @@ Department of Game and Inland Fisheries (VDGIF), as well as the Virginia Society
 
 ### Buchanan County
 
-[Buchanan county](https://en.wikipedia.org/wiki/Buchanan_County,_Virginia) is located in the western part of the state bordering both West Virginia and Kentucky. From a birding perspective, it offers plenty of mountainous woodland at medium elevation for the area. It is also interesting from the perspective that as a coal region county, significant surface mining has been performed in the area and some of the surface mines, no longer active, have been repurposed for recreational (and some wildlife) use. One of those areas was in a Priority Block I focused. These recovered areas, are flatter, and with successional habitat different than the surrounding woodlands. In one area, recovery includes [reintroduciton of Elk](https://www.yesmagazine.org/issue/dirt/2019/04/13/land-recovery-elk-wildlife-habitat-appalachia/) after being extirpated in Virginia 100 years ago.
+[Buchanan county](https://en.wikipedia.org/wiki/Buchanan_County,_Virginia) is located in the western part of the state bordering both West Virginia and Kentucky. From a birding perspective, it offers plenty of mountainous woodland at medium elevation for the area. It is also interesting from the perspective that as a coal region county, significant surface mining has been performed in the area and some of the surface mines, no longer active, have been repurposed for recreational (and some wildlife) use. One of those areas was in a Priority Block that will be discussed in this series of posts. These recovered areas, are flatter, and with successional habitat different than the surrounding woodlands. In one area, recovery includes [reintroduciton of Elk](https://www.yesmagazine.org/issue/dirt/2019/04/13/land-recovery-elk-wildlife-habitat-appalachia/) after being extirpated in Virginia 100 years ago.
 
-## My focus
+## Volunteer focus
 
-My objective in going to Buchanan county was to assist the birders living in the area with the monumental task of surveying the priority blocks of the county. Counties with higher populations, and therefore higher populations of birders are well covered after four years of atlassing, but counties like Buchanan still need more volunteer effort. 
+The objective in going to Buchanan county was to assist the birders living in the area with the monumental task of surveying the priority blocks of the county. Counties with higher populations, and therefore higher populations of birders are well covered after four years of atlassing, but counties like Buchanan still need more volunteer effort. 
 
 ![image](https://photos.app.goo.gl/xKgGXv28fHyAeTG4A)
 
-Priority Blocks require a certain amount of attention before being consisered "complete." Once complete, no more effort is required in that block and atlassers are meant to focus their attention elsewhere. Of course if one happens to notice  breeding confirmation in a "complete" block, one should still enter it. For example, the block I live in is considered complete but when I found a red-shouldered hawk nest in the neighborhood, I still added it. The [2020 summer blockbusting completion criteria](https://ebird.org/atlasva/news/volunteer-guidance-for-final-2020-field-season) are:
+Priority Blocks require a certain amount of attention before being consisered "complete." Once complete, no more effort is required in that block and atlassers are meant to focus their attention elsewhere. Of course if one happens to notice  breeding confirmation in a "complete" block, one should still enter it. For example, the block Susan and I live in is considered complete but when we found a red-shouldered hawk nest in the neighborhood, we still added it. The [2020 summer blockbusting completion criteria](https://ebird.org/atlasva/news/volunteer-guidance-for-final-2020-field-season) are:
 
 1. Daytime survey effort – a minimum of 8 hours of birding
 1. Breeding species list – 60+ potential breeders
@@ -37,13 +37,15 @@ Priority Blocks require a certain amount of attention before being consisered "c
 1. Nocturnal effort –one hour of effort (ideally one spring visit for owls and one summer visit for nightjars)
 1. Habitats – visit all major habitat types present in block
 
-With these in mind, the VABBA2 team led by Dr. Ashley Peele rated blocks based on a number of factors. I chose to work on the following blocks. The first 3 I would attempt to get to completion levels and the fourth I would make a good dent.
+With these in mind, the first three blocks in the table were identified for the week's focus. I would also visit additional blocks as time permitted with Prater SE being a block that might get extra focus.
 
-| Block | Prior Daytime Effort | Prior Breeding Species Count | Prior % Prob+Confirmed | Finished Daytime Effort | Final Breeding Species Count | Final % Probable+Confirmed | Nightjar Survey |
-| ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
-| Bradshaw SE | 
-| Harman SE | 
-| Patterson SE | 
-| *Prater SE* | 
+| Block | Prior Daytime Effort (hrs) | Prior Breeding Species Count | Prior % Prob+Confirmed | Final Daytime Effort(hrs) | Final Breeding Species Count | Final % Probable+Confirmed | Nightjar Survey |
+| ------------ | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
+| Bradshaw SE  | 0.47 | 28 | 18% | TBD | TBD | TBD | TBD |
+| Harman SE    | 1.9  | 45 | 22% | TBD | TBD | TBD | TBD |
+| Patterson SE | 2.8  | 61 | 46% | TBD | TBD | TBD | NA [^1] |
+| *Prater SE*  | 1.63 | 27 | 19% | TBD | TBD | TBD | TBD |
 
-Because I would not be able to do the winter nocturnal, I would also do a nightjar survey of the blocks.
+Because I would not be able to do the winter nocturnal, I would also do a nightjar survey of the blocks.[^1]
+
+[^1]: A birder has done nighttime surveys in the block but they are not yet in the dataset.
