--- a/_posts/2020_06_06.md
+++ b/_posts/2020_06_06.md
@@ -9,27 +9,32 @@ This post describes my participation in volunteer citizen science activity relat
 
 ## Acknowledgments
 
-I am grateful to Buchanan County standout birders Daryl Owens and Roger Mayhorn. Daryl wrote an excellent [description](https://birdingvirginia.org/buchanan) of area birding, and Roger is the president of the [Buchanan County Bird Club](https://sites.google.com/site/buchananbirds/). Both Daryl and Roger provided welcome assistance in best access locations in the area. Daryl took me to some excellent sites and Roger invited me to visit his gorgeous yard and property which he has transformed over time into a haven for birds with native plantings and bird friendly features. 
+I am grateful to Buchanan County standout birders Daryl Owens and Roger Mayhorn. Daryl wrote an excellent [description](https://birdingvirginia.org/buchanan) of area birding, and Roger is the president of the [Buchanan County Bird Club](https://sites.google.com/site/buchananbirds/). Both Daryl and Roger provided welcome assistance in best access to locations in the area. Roger invited me to visit his gorgeous yard and property which he has transformed over time into a haven for birds with native plantings and bird-friendly features. We were all three able to visit while maintaining appropriate distance (because of COVID-19).
 
 ## Introduction
 
+Highlights of the trip included:
+
+* Finding the first Alder Flycatcher reported on eBird for the county
+* Making some mistakes and hopefully learning from them
+* Getting to meet some great people
+
 ### The 2nd Virginia Breeding Bird Atlas 
 
-The 2nd Virginia Breeding Bird Atlas[(VABBA2)](https://ebird.org/atlasva/home) is a five year (2016-2020) statewide effort to understand the distribution of different bird species across the state. VABBA2 is funded and supported by the Virginia
-Department of Game and Inland Fisheries (VDGIF), as well as the Virginia Society of Ornithology
-(VSO). The first atlas was performed between 1985 and 1989. My involvement with the project started in earnest in the 2nd year of the project (2017) when Susan Babineau (spouse) and I started volunteering by going to different areas and documenting (using a protoco, apps, and online tools provided by the project) what birds we saw and whether they were exhibiting any breeding behavior. Birding is focused on priority blocks distributed evenly and randomly across 1/6 of the surface of Virginia.
+The 2nd Virginia Breeding Bird Atlas[(VABBA2)](https://ebird.org/atlasva/home) is a five year (2016-2020) statewide effort to understand the distribution of different bird species across the state. VABBA2 is funded and supported by the Virginia Department of Game and Inland Fisheries (VDGIF), as well as the Virginia Society of Ornithology
+(VSO). The first atlas was performed between 1985 and 1989. My involvement with the project started in earnest in the 2nd year of the project (2017) when Susan Babineau (spouse) and I started volunteering by going to different areas and documenting (using a protocol, apps, and online tools provided by the project) what birds we saw and whether they were exhibiting any breeding behavior. Birding is focused on priority blocks distributed evenly and randomly across 1/6 of the surface of Virginia.
 
 ### Buchanan County
 
-[Buchanan county](https://en.wikipedia.org/wiki/Buchanan_County,_Virginia) is located in the western part of the state bordering both West Virginia and Kentucky. From a birding perspective, it offers plenty of mountainous woodland at medium elevation for the area. It is also interesting from the perspective that as a coal region county, significant surface mining has been performed in the area and some of the surface mines, no longer active, have been repurposed for recreational (and some wildlife) use. One of those areas was in a Priority Block that will be discussed in this series of posts. These recovered areas, are flatter, and with successional habitat different than the surrounding woodlands. In one area, recovery includes [reintroduciton of Elk](https://www.yesmagazine.org/issue/dirt/2019/04/13/land-recovery-elk-wildlife-habitat-appalachia/) after being extirpated in Virginia 100 years ago.
+[Buchanan county](https://en.wikipedia.org/wiki/Buchanan_County,_Virginia) is located in the western part of the state bordering both West Virginia and Kentucky. From a birding perspective, it offers plenty of mountainous woodland at medium elevation for the area. It is also interesting from the perspective that as a coal region county, significant surface mining has been performed in the area and some of the surface mines, no longer active, have been repurposed for recreational (and some wildlife) use. One of those areas was in a Priority Block that will be discussed in this series of posts. These recovered areas are flatter and have successional habitat different than the surrounding woodlands. In one area, recovery includes [reintroduciton of Elk](https://www.yesmagazine.org/issue/dirt/2019/04/13/land-recovery-elk-wildlife-habitat-appalachia/) after being extirpated in Virginia 100 years ago.
 
 ## Volunteer focus
 
-The objective in going to Buchanan county was to assist the birders living in the area with the monumental task of surveying the priority blocks of the county. Counties with higher populations, and therefore higher populations of birders are well covered after four years of atlassing, but counties like Buchanan still need more volunteer effort. 
+The objective in going to Buchanan county was to assist the birders living in the area with the monumental task of surveying the priority blocks of the county. Counties with more residents, and therefore more birders, are well covered after four years of atlassing, but counties with fewer residents still need more volunteer effort. 
 
-![image](https://photos.app.goo.gl/xKgGXv28fHyAeTG4A)
+![image](images/20200601BuchananViewCompressed.jpg)
 
-Priority Blocks require a certain amount of attention before being consisered "complete." Once complete, no more effort is required in that block and atlassers are meant to focus their attention elsewhere. Of course if one happens to notice  breeding confirmation in a "complete" block, one should still enter it. For example, the block Susan and I live in is considered complete but when we found a red-shouldered hawk nest in the neighborhood, we still added it. The [2020 summer blockbusting completion criteria](https://ebird.org/atlasva/news/volunteer-guidance-for-final-2020-field-season) are:
+Priority Blocks require a certain amount of attention before being considered "complete." Once complete, no more effort is required in that block and atlassers are meant to focus their attention elsewhere. Of course if one happens to notice breeding confirmation in a "complete" block, one should still enter it. For example, the block Susan and I live in is considered complete but when we found a red-shouldered hawk nest in the neighborhood, we still added it. The [2020 summer blockbusting completion criteria](https://ebird.org/atlasva/news/volunteer-guidance-for-final-2020-field-season) are:
 
 1. Daytime survey effort – a minimum of 8 hours of birding
 1. Breeding species list – 60+ potential breeders
@@ -43,9 +48,9 @@ With these in mind, the first three blocks in the table were identified for the 
 | ------------ | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Bradshaw SE  | 0.47 | 28 | 18% | TBD | TBD | TBD | TBD |
 | Harman SE    | 1.9  | 45 | 22% | TBD | TBD | TBD | TBD |
-| Patterson SE | 2.8  | 61 | 46% | TBD | TBD | TBD | NA [^1] |
+| Patterson SE | 2.8  | 61 | 46% | TBD | TBD | TBD | NA |
 | *Prater SE*  | 1.63 | 27 | 19% | TBD | TBD | TBD | TBD |
 
-Because I would not be able to do the winter nocturnal, I would also do a nightjar survey of the blocks.[^1]
+The table will be completed in a future post [See](). This effort will also include a nighttime nightjar survey of those blocks except for Patterson SE because another birder has performed surveys in the block but they are not yet in the dataset.
 
-[^1]: A birder has done nighttime surveys in the block but they are not yet in the dataset.
+In the next post, I will describe the surprise I had when I heard what I thought was an Adler Flycatcher.
